Add apache Tinkerpop dependency

--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-core</artifactId>
+      <version>3.0.1-incubating</version>
+    </dependency>
   </dependencies>
 </project>
