--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>gremlin-core</artifactId>
       <version>3.0.1-incubating</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
 </project>
