--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>2.0.0</version>
+    </dependency>
   </dependencies>
 </project>
