--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.tinkerpop</groupId>
-      <artifactId>gremlin-core</artifactId>
-      <version>3.0.1-incubating</version>
+       <groupId>com.thinkaurelius.titan</groupId>
+       <artifactId>titan-core</artifactId>
+       <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
