Update driver class after rename in main POM

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <configuration>
         <archive>
           <manifest>
-            <mainClass>gov.nasa.jpl.CDRIngester</mainClass>
+            <mainClass>gov.nasa.jpl.CDRIngestDriver</mainClass>
           </manifest>
         </archive>
         <descriptorRefs>
