--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
        <version>1.0.0</version>
     </dependency>
     <dependency>
+       <groupId>org.apache.tinkerpop</groupId>
+       <artifactId>gremlin-core</artifactId>
+       <version>3.0.1-incubating</version>
+    </dependency>
+    <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
